tests/ui/cfg/diagnostics-same-crate.stderr
error[E0432]: unresolved import `super::inner::doesnt_exist`
  --> $DIR/diagnostics-same-crate.rs:32:9
   |
LL |     use super::inner::doesnt_exist;
   |         ^^^^^^^^^^^^^^^^^^^^^^^^^^ no `doesnt_exist` in `inner`
   |
note: found an item that was configured out
  --> $DIR/diagnostics-same-crate.rs:11:13
   |
LL |     pub mod doesnt_exist {
   |             ^^^^^^^^^^^^
note: the item is gated here
  --> $DIR/diagnostics-same-crate.rs:8:5
   |
LL |     #[cfg(false)]
   |     ^^^^^^^^^^^^^

error[E0432]: unresolved import `super::inner::doesnt_exist`
  --> $DIR/diagnostics-same-crate.rs:35:23
   |
LL |     use super::inner::doesnt_exist::hi;
   |                       ^^^^^^^^^^^^ could not find `doesnt_exist` in `inner`
   |
note: found an item that was configured out
  --> $DIR/diagnostics-same-crate.rs:11:13
   |
LL |     pub mod doesnt_exist {
   |             ^^^^^^^^^^^^
note: the item is gated here
  --> $DIR/diagnostics-same-crate.rs:8:5
   |
LL |     #[cfg(false)]
   |     ^^^^^^^^^^^^^

error[E0433]: failed to resolve: could not find `doesnt_exist` in `inner`
  --> $DIR/diagnostics-same-crate.rs:54:12
   |
LL |     inner::doesnt_exist::hello();
   |            ^^^^^^^^^^^^ could not find `doesnt_exist` in `inner`
   |
note: found an item that was configured out
  --> $DIR/diagnostics-same-crate.rs:11:13
   |
LL |     pub mod doesnt_exist {
   |             ^^^^^^^^^^^^
note: the item is gated here
  --> $DIR/diagnostics-same-crate.rs:8:5
   |
LL |     #[cfg(false)]
   |     ^^^^^^^^^^^^^

error[E0425]: cannot find function `uwu` in module `inner`
  --> $DIR/diagnostics-same-crate.rs:49:12
   |
LL |     inner::uwu();
   |            ^^^ not found in `inner`
   |
note: found an item that was configured out
  --> $DIR/diagnostics-same-crate.rs:5:12
   |
LL |     pub fn uwu() {}
   |            ^^^
note: the item is gated here
  --> $DIR/diagnostics-same-crate.rs:4:5
   |
LL |     #[cfg(false)]
   |     ^^^^^^^^^^^^^

error[E0425]: cannot find function `meow` in module `inner::right`
  --> $DIR/diagnostics-same-crate.rs:58:19
   |
LL |     inner::right::meow();
   |                   ^^^^ not found in `inner::right`
   |
note: found an item that was configured out
  --> $DIR/diagnostics-same-crate.rs:26:16
   |
LL |         pub fn meow() {}
   |                ^^^^
note: the item is gated behind the `what-a-cool-feature` feature
  --> $DIR/diagnostics-same-crate.rs:25:15
   |
LL |         #[cfg(feature = "what-a-cool-feature")]
   |               ^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^

error[E0425]: cannot find function `uwu` in this scope
  --> $DIR/diagnostics-same-crate.rs:45:5
   |
LL |     uwu();
   |     ^^^ not found in this scope

error[E0425]: cannot find function `vanished` in this scope
  --> $DIR/diagnostics-same-crate.rs:64:5
   |
LL |     vanished();
   |     ^^^^^^^^ not found in this scope

error: aborting due to 7 previous errors

Some errors have detailed explanations: E0425, E0432, E0433.
For more information about an error, try `rustc --explain E0425`.
